test/files/neg/sip23-null.check
sip23-null.scala:2: error: type mismatch;
 found   : Null(null)
 required: x.type
  def bar(x: Any): x.type = null
                            ^
sip23-null.scala:3: error: type mismatch;
 found   : Null(null)
 required: x.type
  def foo(x: AnyVal): x.type = null
                               ^
2 errors
